try adding realtime and fix some dark mode ui

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,6 +8,6 @@
 }
 
 html {
-   transition: all 1s, color 0.5s ease-in-out;
+   transition: backgroundColor 1s, color 0.5s ease-in-out;
 }
 
